feat: add owned ranges read UI
